# FacialExps

./: CMakeLists.txt  README.md  main.cpp
data/faces/: triangulate.py
data/test/: triangulate.py
data/weights/: 12.weights
include/: obj.h  shader.h  tiny_obj_loader.h
shaders/: shader.vs
